src/objects/geopointe__GP_List_Assignment2__c.object
<CustomObject>
    <description>Value in a working list.</description>
    <fields>
        <fullName>geopointe__GP_List2__c</fullName>
        <description>Geopointe list that the list assignment belongs to.</description>
        <inlineHelpText>Geopointe list that the list assignment belongs to.</inlineHelpText>
        <label>Geopointe List</label>
        <referenceTo>geopointe__GP_List2__c</referenceTo>
        <relationshipLabel>Geopointe List Assignment</relationshipLabel>
        <relationshipName>Geopointe_List_Assignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status of the list assignment - completed or not completed.</description>
        <inlineHelpText>Status of the list assignment - completed or not completed.</inlineHelpText>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Order__c</fullName>
        <inlineHelpText>Contains the order in which list assignments are shown in a list.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_ID__c</fullName>
        <description>ID of the place that the list assignment belongs to.</description>
        <inlineHelpText>ID of the place that the list assignment belongs to.</inlineHelpText>
        <label>Place ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_ID__c</fullName>
        <description>ID of the record that the list assignment belongs to.</description>
        <inlineHelpText>ID of the record that the list assignment belongs to.</inlineHelpText>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe List Assignment</label>
    <nameField>
        <label>Geopointe List Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe List Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>